Added functionality to Calculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<div class="temperature-calculator-container">
-  <h1>{{ title }}</h1>
+<div class="temperature-calculator-container" [formGroup]="temperatureFormGroup">
+  <h1>Temperature Calculator</h1>
   <div class="fahrenheit-row">
     <div class="f-row-label">
       <label for="fahrenheit">°F</label>
     </div>
     <div class="f-input">
-      <input type="number" id="fahrenheit">
+      <input type="number" id="fahrenheit" formControlName="fahrenheitInput">
     </div>
     <div class="f-button">
-      <button>to C</button>
+      <button (click)="fahrenheitToCelsius()">to C</button>
     </div>
   </div>
   <div class="celsius-row">
@@ -16,10 +16,10 @@
       <label for="celsius">°C</label>
     </div>
     <div class="c-input">
-      <input type="number" id="celsius">
+      <input type="number" id="celsius" formControlName="celsiusInput">
     </div>
     <div class="c-button">
-      <button>to F</button>
+      <button (click)="celsiusToFahrenheit()">to F</button>
     </div>
   </div>
 </div>
