Adding buttons to switch to popular feels like values

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,5 +42,13 @@
         <div>{{ condition$ | async }}</div>
       </div>
     </div>
+    <div class="buttons-grid">
+      <button (click)="absoluteZeroButton()">Absolute Zero</button>
+      <button (click)="iceButton()">Ice</button>
+      <button (click)="niceButton()">Nice</button>
+      <button (click)="hotButton()">Hot</button>
+      <button (click)="boilingButton()">Boiling</button>
+      <button (click)="randomButton()">Random</button>
+    </div>
   </div>
 </div>
