Lesson 6 - Calculate a color for how a temperature feels

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,8 @@
         <div>{{ condition$ | async }}</div>
       </div>
     </div>
+    <div class="feels-like-color-container" [style.background-color]="temperatureColor$ | async">
+    </div>
     <div class="buttons-grid">
       <button (click)="absoluteZeroButton()">Absolute Zero</button>
       <button (click)="iceButton()">Ice</button>
