--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -51,11 +51,20 @@
   width: 100%;
   padding-bottom: 1rem;
 }
+
 .feels-like-label {
   padding-right: 3rem;
+}
+
+.feels-like-color-container {
+  align-content: center;
+  height: 1rem;
+  width: 15rem;
+  padding-bottom: 1rem;
 }
 
 .buttons-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding-top: 1rem;
 }
